Allow updating drupal core also
